# ChangeLog for perl-core/Digest-MD5
# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/perl-core/Digest-MD5/ChangeLog,v 1.21 2009/03/19 14:35:48 armin76 Exp $

  19 Mar 2009; Raúl Porcel <armin76@gentoo.org> Digest-MD5-2.36.ebuild,
  Digest-MD5-2.38.ebuild:
  ~m68k love, thanks to kolla for testing

  13 Mar 2009; Torsten Veller <tove@gentoo.org> -Digest-MD5-2.33.ebuild:
  Cleanup

  14 Dec 2008; Alexis Ballier <aballier@gentoo.org> Digest-MD5-2.38.ebuild:
  keyword ~sparc-fbsd

  28 Nov 2008; Alexis Ballier <aballier@gentoo.org> Digest-MD5-2.38.ebuild:
  keyword ~x86-fbsd, bug #247887

*Digest-MD5-2.38 (21 Nov 2008)

  21 Nov 2008; Torsten Veller <tove@gentoo.org> +Digest-MD5-2.38.ebuild:
  Version bump

  15 Apr 2007; Markus Rothe <corsair@gentoo.org> Digest-MD5-2.36.ebuild:
  Stable on ppc64

  03 Mar 2007; Andrej Kacian <ticho@gentoo.org> Digest-MD5-2.36.ebuild:
  Stable on x86, bug #169153.

  19 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  Digest-MD5-2.33.ebuild, Digest-MD5-2.36.ebuild:
  Version bump, thanks seemant

  23 Oct 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  Digest-MD5-2.36.ebuild:
  Stable on hppa

  16 Sep 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  Digest-MD5-2.36.ebuild:
  ppc stable

  05 Sep 2006; Joshua Kinard <kumba@gentoo.org> Digest-MD5-2.36.ebuild:
  Marked stable on mips.

  18 Aug 2006; Michael Cummings <mcummings@gentoo.org>
  Digest-MD5-2.36.ebuild:
  Marking amd64 stable

  03 Aug 2006; Michael Cummings <mcummings@gentoo.org>
  Digest-MD5-2.33.ebuild, Digest-MD5-2.36.ebuild:
  Added perl dep

  18 Jul 2006; Bryan Østergaard <kloeri@gentoo.org> Digest-MD5-2.36.ebuild:
  Stable on alpha.

  05 Jul 2006; Christian Hartmann <ian@gentoo.org> Digest-MD5-2.33.ebuild,
  Digest-MD5-2.36.ebuild:
  Fixed RDEPEND wrt bug #134781

  18 Jun 2006; Bryan Østergaard <kloeri@gentoo.org> Digest-MD5-2.36.ebuild:
  Stable on ia64.
