@@ -1,6 +1,8 @@
 DIST Digest-MD5-2.36.tar.gz 44687 RMD160 984508551054ca6f83830689c9d78fa032cb159e SHA1 ec27cd80b16ba6f4c05bb82b0de184c8f2d8e4a6 SHA256 610a45812fce7cbbe3f35e6fa630adf36ab289ee2d5b00f177b0869bca749aa8
 DIST Digest-MD5-2.38.tar.gz 45345 RMD160 49aca118503d170d5db7f25c7d608dc7755d11a6 SHA1 f2b67eeaa745fd0501bf93d55c8d3339029c9157 SHA256 1b184bd61cdfa766098d2b6de9896c5d07ff198250a4731f57da4f249acebab4
+DIST Digest-MD5-2.39.tar.gz 45255 RMD160 87876d61bf5eac900f913790f51ed0d8f50860d1 SHA1 4242f0b1ffa898b7b7d17b4b9275f96f78bb64a6 SHA256 8a5775fdad5d28d12800fbf40fd903a5c3687b33cb0fb1b520e9b4883cf6be04
 EBUILD Digest-MD5-2.36.ebuild 581 RMD160 fda4670fdedeade6e25d581e4b5ca59ac38e75eb SHA1 e68d1a1619bad99982fa46e51ed87db101afc680 SHA256 294af2b3b9e34da0824452f9d3b2de6ff226adca670a7cf33db458c629d1621b
 EBUILD Digest-MD5-2.38.ebuild 569 RMD160 f754249ac9884a8dc0eb3161f79f7aefea81b32a SHA1 84e1f6de11b15ea099c55eb76adfa99a44f6e91f SHA256 6da281eada1a95906c62229de5c3d6d2cf03d1134c034e74932206051897e692
-MISC ChangeLog 5862 RMD160 3458e1c809315897d77a2f5e8427c047bf1215d5 SHA1 a83c10c9e9fbf4c2cd5c5dbcc937f01a0407b1f1 SHA256 eed86c2f6fab07bc94c66c821c6e212ef81a1f8567cf812faff5ec63224dddba
+EBUILD Digest-MD5-2.39.ebuild 559 RMD160 1ae4417b58b0a3446604e5d0a81daadb31fd2b3f SHA1 2b15cc74cf4eb4d3100767de787cfcd131217db7 SHA256 92f568a94c3e33df729b3d7794751f8d44a42884168cf126766a47c4ae1df6d1
+MISC ChangeLog 5980 RMD160 0656951efab36ce308c144f15d3267c9780c8337 SHA1 8c35d3783b13cf314a8e32578dd0ff0eeda36f25 SHA256 c5475a250ce2bbff6624fbce9e94f5a075671098902c644dd5d41fa5d16707a0
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
