@@ -1,6 +1,11 @@
 # ChangeLog for perl-core/Digest-MD5
-# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/perl-core/Digest-MD5/ChangeLog,v 1.21 2009/03/19 14:35:48 armin76 Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/perl-core/Digest-MD5/ChangeLog,v 1.22 2009/06/10 13:39:53 tove Exp $
+
+*Digest-MD5-2.39 (10 Jun 2009)
+
+  10 Jun 2009; Torsten Veller <tove@gentoo.org> +Digest-MD5-2.39.ebuild:
+  Version bump
 
   19 Mar 2009; Raúl Porcel <armin76@gentoo.org> Digest-MD5-2.36.ebuild,
   Digest-MD5-2.38.ebuild:
